--- a/source/scss/components/_mainArea.scss
+++ b/source/scss/components/_mainArea.scss
@@ -2,10 +2,12 @@
     position: relative;
     max-width: 960px;
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
     margin-top: auto;
     margin-bottom: auto;
-    bottom: $spacer*6;
+    bottom: $spacer*2;
 
     @include media-breakpoint-down(sm) {
         padding-right: 0;
@@ -14,15 +16,21 @@
 }
 
 .mainPic {
-    background-image: url(../images/mainPic.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    padding-top: percentage(853/862);
+    max-width: 862px;
     width: 100%;
 
-    @include media-breakpoint-down(sm) {
-        padding-top: percentage(1.3);
+    &::before {
+        content: "";
+        display: block;
+        background-image: url(../images/mainPic.png);
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-position: center;
+        padding-top: percentage(853/862);
+
+        @include media-breakpoint-down(sm) {
+            padding-top: percentage(1.3);
+        }
     }
 }
 
@@ -32,10 +40,10 @@
     margin-left: auto;
     position: absolute;
     width: 90%;
-    bottom: $spacer*4;
+    bottom: $spacer*8;
 
     @include media-breakpoint-down(sm) {
-        bottom: $spacer*2;
+        bottom: $spacer*8;
 
     }
 
@@ -49,7 +57,6 @@
         padding-top: percentage(156/706);
 
         @include media-breakpoint-down(sm) {
-            // padding-top: percentage(1.5);
             margin-right: -15px;
             margin-left: -15px;
         }
