--- a/source/scss/foundation/bootstrap/_utilities.scss
+++ b/source/scss/foundation/bootstrap/_utilities.scss
@@ -2,10 +2,10 @@
 // @import "utilities/background";
 // @import "utilities/borders";
 @import "utilities/clearfix";
-@import "utilities/display";
-@import "utilities/embed";
-@import "utilities/flex";
-@import "utilities/float";
+// @import "utilities/display";
+// @import "utilities/embed";
+// @import "utilities/flex";
+// @import "utilities/float";
 // @import "utilities/interactions";
 // @import "utilities/overflow";
 @import "utilities/position";
