--- a/source/scss/foundation/bootstrap/mixins/_grid-framework.scss
+++ b/source/scss/foundation/bootstrap/mixins/_grid-framework.scss
@@ -57,9 +57,9 @@
         }
       }
 
-      .order#{$infix}-first { order: -1; }
+      // .order#{$infix}-first { order: -1; }
 
-      .order#{$infix}-last { order: $columns + 1; }
+      // .order#{$infix}-last { order: $columns + 1; }
 
       // @for $i from 0 through $columns {
       //   .order#{$infix}-#{$i} { order: $i; }
