--- a/source/pug/layout/_layout.pug
+++ b/source/pug/layout/_layout.pug
@@ -5,8 +5,9 @@ html
 		meta(charset="UTF-8")
 		meta(name="viewport" content="width=device-width, initial-scale=1")
 		meta(name="format-detection" content="telephone=no")
-		link(rel="icon" sizes="16x16" href="images/favicon.ico")
-		link(rel="apple-touch-icon" sizes="192x192" href="images/touch-icon.png")
+		link(rel="icon" sizes="16x16" href="images/favicon_io/favicon.ico")
+		link(rel="apple-touch-icon" sizes="192x192" href="images/favicon_io/apple-touch-icon.png")
+		link(rel="manifest" href="images/favicon_io/site.webmanifest")
 		meta(name="description" content="Una's Portfolio")
 		meta(name="apple-mobile-web-app-capable" content="yes")
 		meta(name="apple-mobile-web-app-status-bar-style" content="black")
