--- a/source/pug/works.pug
+++ b/source/pug/works.pug
@@ -4,24 +4,24 @@ block title
     title Una's Portfolio
     link(rel="stylesheet", href="css/all.css?"+new Date().getTime())
 block header
-    header#HOME.header.header-index.min-vh-100
+    header#HOME.header
         nav.navbar.navbar-header.container-fluid
-            a.navbar-brand.brand(href="#HOME",data-operate="SmoothScroll")
+            a.navbar-brand.brand(href="../index.html#HOME")
             button.navbar-toggler.navbar-toggler-x(type="button",data-toggle="collapse",data-target="#headNavbarContent",aria-controls="headNavbarContent",aria-expanded="false",aria-label="Toggle navigation")
                 .toggler-bar
         .collapse.collapse-header#headNavbarContent
             .collapse-content.container-fluid
-                a.navbar-brand.brand-nav(href="#HOME",data-operate="SmoothScroll")
+                a.navbar-brand.brand-nav(href="../index.html#HOME")
                 .collapse-title
                     | UnaXie’s
                     br
                     | Portfolio
                 ul.navbar-nav
                     li.nav-item
-                        a.nav-link(href="#HOME",data-operate="SmoothScroll")
+                        a.nav-link(href="../index.html#HOME") 
                             span HOME
                     li.nav-item
-                        a.nav-link(href="#ABOUT",data-operate="SmoothScroll") 
+                        a.nav-link(href="../index.html#ABOUT") 
                             span ABOUT
                     li.nav-item
                         a.nav-link(href="#WORKS",data-operate="SmoothScroll")
@@ -35,80 +35,7 @@ block header
                         i.icon.icon-github
                     a.btn.btn-circle(href="https://dribbble.com/UnaXie",target="_blank")
                         i.icon.icon-dribbble
-        .mainArea.container-lg
-            .mainPic
-            .mainTitle
-        .btn.btn-mouse(href="#ABOUT",data-operate="SmoothScroll")
-
 block content
-    section#ABOUT.section.section-aboutMe
-        .container
-            h2.h2.title 
-                .title-content ABOUT ME
-            .row
-                .col-lg-6.aboutMe-picArea
-                    .portfolioPic
-                    .portfolioContact
-                        span.icon.icon-mail
-                        span.font-weight-bold una416@gmail.com
-                .col-lg-6.aboutMe-textArea
-                    h5.h5.subTitle EXPERIENCE
-                    .row
-                        .col-lg-6
-                            .pillTitle
-                                .pillTitle-content Work
-                            ul.expList.expList-lineDeco
-                                li.expList-item
-                                    .exp-title 2019~NOW
-                                    .exp-content
-                                        | Freelancer - 
-                                        br
-                                        | UI Designer / 
-                                        br
-                                        | Front-end Engineer 
-                                li.expList-item
-                                    .exp-title 2016.11 ~ 2019.2
-                                    .exp-content
-                                        | 無限創意科技 - 前端工程師
-                                        br
-                                        | 數位前進 - 前端工程師 
-                                li.expList-item
-                                    .exp-title 2016.4 ~ 2016.11
-                                    .exp-content
-                                        | 巴克斯數位 - 網頁工程師 
-                                li.expList-item
-                                    .exp-title 2010.8 ~ 2014.10
-                                    .exp-content
-                                        | 藏墨數位藝術 - 視覺設計師
-                                        br
-                                        | 四方通行旅行社 - 網頁設計師 
-                        .col-lg-6
-                            .pillTitle
-                                .pillTitle-content Volunteer
-                            ul.expList
-                                li.expList-item
-                                    .exp-title 2017
-                                    .exp-content
-                                        | MOPCON - 前端工程師 
-                                li.expList-item
-                                    .exp-title 2017
-                                    .exp-content
-                                        | 高雄前端開發者大會 -
-                                        br
-                                        | 視覺設計師 / 前端工程師 
-                                li.expList-item
-                                    .exp-title 2016
-                                    .exp-content
-                                        | MOPCON - UI Designer 
-                            .pillTitle
-                                .pillTitle-content Education
-                                ul.expList.expList-lineDeco
-                                    li.expList-item
-                                        .exp-title 2017
-                                        .exp-content
-                                            | 國立雲林科技大學 -
-                                            br
-                                            | 數位媒體設計系畢業
     section#WORKS.section.section-works
             .container
                 h2.h2.title 
@@ -150,10 +77,6 @@ block content
                                 .project-title 高雄前端大會
                                 .project-detail Visual Design / Front-End
                             .projectImage.ratioImg.ratioImg-1by1(style="background-image:url('https://picsum.photos/id/302/900/600')")
-                .text-center
-                    a.btn.btn-secondary(href="works.html") MORE
-
-
 block footer
     include ./layout/_footer
 block scrollBtn
