--- a/source/scss/foundation/bootstrap/_buttons.scss
+++ b/source/scss/foundation/bootstrap/_buttons.scss
@@ -18,7 +18,6 @@
   @include transition($btn-transition);
 
   @include hover() {
-    color: $body-color;
     text-decoration: none;
   }
 
@@ -74,29 +73,29 @@ fieldset:disabled a.btn {
 //
 
 // Make a button look and behave like a link
-.btn-link {
-  font-weight: $font-weight-normal;
-  color: $link-color;
-  text-decoration: $link-decoration;
+// .btn-link {
+//   font-weight: $font-weight-normal;
+//   color: $link-color;
+//   text-decoration: $link-decoration;
 
-  @include hover() {
-    color: $link-hover-color;
-    text-decoration: $link-hover-decoration;
-  }
+//   @include hover() {
+//     color: $link-hover-color;
+//     text-decoration: $link-hover-decoration;
+//   }
 
-  &:focus,
-  &.focus {
-    text-decoration: $link-hover-decoration;
-  }
+//   &:focus,
+//   &.focus {
+//     text-decoration: $link-hover-decoration;
+//   }
 
-  &:disabled,
-  &.disabled {
-    color: $btn-link-disabled-color;
-    pointer-events: none;
-  }
+//   &:disabled,
+//   &.disabled {
+//     color: $btn-link-disabled-color;
+//     pointer-events: none;
+//   }
 
-  // No need for an active state here
-}
+//   // No need for an active state here
+// }
 
 
 //
