--- a/source/pug/index.pug
+++ b/source/pug/index.pug
@@ -152,10 +152,31 @@ block content
                             .projectImage.ratioImg.ratioImg-1by1(style="background-image:url('https://picsum.photos/id/302/900/600')")
                 .text-center
                     a.btn.btn-secondary(href="works.html") MORE
-
-
 block footer
-    include ./layout/_footer
+    .footer
+        .container
+            .brand
+            ul.footer-nav
+                li.nav-item
+                    a.nav-link(href="#HOME",data-operate="SmoothScroll")
+                        span HOME
+                li.nav-item
+                    a.nav-link(href="#ABOUT",data-operate="SmoothScroll")
+                        span ABOUT
+                li.nav-item
+                    a.nav-link(href="#WORKS",data-operate="SmoothScroll")
+                        span WORKS
+            .footer-underNav   
+                a.btn.btn-circle-outline(href="mailto:una416@gmail.com")
+                    i.icon.icon-mail
+                a.btn.btn-circle-outline(href="https://www.linkedin.com/in/una-xie-0093167a/",target="_blank")
+                    i.icon.icon-linkedin
+                a.disabled.btn.btn-circle-outline(href="#")
+                    i.icon.icon-github
+                a.btn.btn-circle-outline(href="https://dribbble.com/UnaXie",target="_blank")
+                    i.icon.icon-dribbble
+            .small.d-none.d-lg-block 本網站建議  Google Chrome / Firefox / Safari 等瀏覽器瀏覽
+            p.small © 2020 Una Xie
 block scrollBtn
     include ./layout/_scrollBtn
 block scripts
