--- a/source/pug/index.pug
+++ b/source/pug/index.pug
@@ -115,43 +115,61 @@ block content
                     .title-content WORKS
                 .row.worksList
                     .col-lg-4.col-md-6
-                        a.projectItem.projectHover(href="#")
+                        a.projectItem.projectHover(href="http://www.ksf2e.com/",target="_blank")
                             .projectHover-inner
                                 .project-title 高雄前端大會
-                                .project-detail Visual Design / Front-End
-                            .projectImage.ratioImg.ratioImg-1by1(style="background-image:url('https://picsum.photos/id/302/900/600')")
+                                .project-detail 
+                                    | 專案執行項目
+                                    br/
+                                    | Visual Design, Front-End
+                            .projectImage.ratioImg.ratioImg-1by1(style="background-image:url('/images/project/2017khF2Econf.png')")
                     .col-lg-4.col-md-6
-                        a.projectItem.projectHover(href="#")
+                        a.projectItem.projectHover(href="https://www2.land.ntpc.gov.tw/NTPC_CTLWEB/PJT/PJT010/CTLWEB01.jsp",target="_blank")
                             .projectHover-inner
-                                .project-title 高雄前端大會
-                                .project-detail Visual Design / Front-End
-                            .projectImage.ratioImg.ratioImg-1by1(style="background-image:url('https://picsum.photos/id/302/900/600')")
+                                .project-title 新北地政 徵收案件公告資料查詢
+                                .project-detail 
+                                    | 專案執行項目
+                                    br/
+                                    | Visual Design, Front-End
+                            .projectImage.ratioImg.ratioImg-1by1(style="background-image:url('/images/project/ntpc.png')")
                     .col-lg-4.col-md-6
-                        a.projectItem.projectHover(href="#")
+                        a.projectItem.projectHover(href="https://www.zenfar.com.tw/portal",target="_blank")
                             .projectHover-inner
-                                .project-title 高雄前端大會
-                                .project-detail Visual Design / Front-End
-                            .projectImage.ratioImg.ratioImg-1by1(style="background-image:url('https://picsum.photos/id/302/900/600')")
+                                .project-title 仁發建築
+                                .project-detail 
+                                    | 專案執行項目
+                                    br/
+                                    | Front-End
+                            .projectImage.ratioImg.ratioImg-1by1(style="background-image:url('/images/project/zenfar.png')")
                     .col-lg-4.col-md-6
-                        a.projectItem.projectHover(href="#")
+                        a.projectItem.projectHover(href="https://www.minfa168.com.tw/",target="_blank")
                             .projectHover-inner
-                                .project-title 高雄前端大會
-                                .project-detail Visual Design / Front-End
-                            .projectImage.ratioImg.ratioImg-1by1(style="background-image:url('https://picsum.photos/id/302/900/600')")
+                                .project-title 名發建設機構
+                                .project-detail 
+                                    | 專案執行項目
+                                    br/
+                                    | Front-End
+                            .projectImage.ratioImg.ratioImg-1by1(style="background-image:url('/images/project/minfar.png')")
                     .col-lg-4.col-md-6
-                        a.projectItem.projectHover(href="#")
+                        a.projectItem.projectHover(href="https://bre.is/SA8BMgQv",target="_blank")
                             .projectHover-inner
-                                .project-title 高雄前端大會
-                                .project-detail Visual Design / Front-End
-                            .projectImage.ratioImg.ratioImg-1by1(style="background-image:url('https://picsum.photos/id/302/900/600')")
+                                .project-title 新北地政e服務
+                                .project-detail 
+                                    | 專案執行項目
+                                    br/
+                                    | Visual Design, UI Design
+                            .projectImage.ratioImg.ratioImg-1by1(style="background-image:url('/images/project/land.ntpc.png')")
                     .col-lg-4.col-md-6
-                        a.projectItem.projectHover(href="#")
+                        a.projectItem.projectHover(href="https://bre.is/Mg2MVPvj",target="_blank")
                             .projectHover-inner
-                                .project-title 高雄前端大會
-                                .project-detail Visual Design / Front-End
-                            .projectImage.ratioImg.ratioImg-1by1(style="background-image:url('https://picsum.photos/id/302/900/600')")
+                                .project-title 找咖啡
+                                .project-detail 
+                                    | 專案執行項目
+                                    br/
+                                    | Visual Design, UI Design
+                            .projectImage.ratioImg.ratioImg-1by1(style="background-image:url('/images/project/CafeFinder.png')")
                 .text-center
-                    a.btn.btn-secondary(href="works.html") MORE
+                    a.btn.btn-secondary(href="#") MORE
 block footer
     .footer
         .container
@@ -185,4 +203,5 @@ block scripts
         $(function() {
             goTop();
             operateSideNav();
+            scrollOpacity();
         });
