--- a/source/scss/components/_mainArea.scss
+++ b/source/scss/components/_mainArea.scss
@@ -22,7 +22,7 @@
     &::before {
         content: "";
         display: block;
-        background-image: url(../images/mainPic.png);
+        background-image: url(../images/mainPic.gif);
         background-repeat: no-repeat;
         background-size: contain;
         background-position: center;
