--- a/source/scss/layout/page/_works.scss
+++ b/source/scss/layout/page/_works.scss
@@ -16,6 +16,14 @@
 .projectHover {
     position: relative;
 
+    .project-detail {
+        font-size: $small-font-size;
+    }
+
+    .projectHover-inner {
+        word-break: keep-all;
+    }
+
     @include media-breakpoint-down(md) {
         .projectHover-inner {
             margin-top: $spacer/2;
@@ -24,10 +32,6 @@
 
         .project-title {
             font-weight: $font-weight-bold;
-        }
-
-        .project-detail {
-            font-size: $small-font-size;
         }
 
         .projectImage {
@@ -46,13 +50,14 @@
         .projectHover-inner {
             opacity: 0;
             display: flex;
-            background-color: transparentize($primary, 0.5);
+            background-color: transparentize($primary, 0.15);
             flex-direction: column;
             align-items: center;
             justify-content: center;
             position: absolute;
             width: 100%;
             height: 100%;
+            text-align: center;
             color: $white;
             @include transition($transition-base);
 
