--- a/source/scss/utilities/_animation.scss
+++ b/source/scss/utilities/_animation.scss
@@ -14,3 +14,17 @@
         top: 25px;
     }
 }
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+.fadeIn{
+    animation: fadeIn 1.5s both;
+}
