--- a/source/pug/index.pug
+++ b/source/pug/index.pug
@@ -157,7 +157,7 @@ block content
                                 .project-detail 
                                     | 專案執行項目
                                     br/
-                                    | Visual Design, UI Design
+                                    | Visual Design, UI Design, Front-End
                             .projectImage.ratioImg.ratioImg-1by1(style="background-image:url('/images/project/land.ntpc.png')")
                     .col-lg-4.col-md-6
                         a.projectItem.projectHover(href="https://bre.is/Mg2MVPvj",target="_blank")
