--- a/source/scss/layout/page/_aboutMe.scss
+++ b/source/scss/layout/page/_aboutMe.scss
@@ -46,7 +46,7 @@
 
     &:before {
         content: "";
-        background-image: url(../images/portfolio-pic.png);
+        background-image: url(../images/portfolio-pic.jpg);
         display: block;
         background-size: contain;
         background-repeat: no-repeat;
