--- a/source/pug/index.pug
+++ b/source/pug/index.pug
@@ -122,7 +122,7 @@ block content
                                     | 專案執行項目
                                     br/
                                     | Visual Design, Front-End
-                            .projectImage.ratioImg.ratioImg-1by1(style="background-image:url('/images/project/2017khF2Econf.png')")
+                            .projectImage.ratioImg.ratioImg-1by1(style="background-image:url('/images/project/2017khF2Econf.jpg')")
                     .col-lg-4.col-md-6
                         a.projectItem.projectHover(href="https://www2.land.ntpc.gov.tw/NTPC_CTLWEB/PJT/PJT010/CTLWEB01.jsp",target="_blank")
                             .projectHover-inner
@@ -131,7 +131,7 @@ block content
                                     | 專案執行項目
                                     br/
                                     | Visual Design, Front-End
-                            .projectImage.ratioImg.ratioImg-1by1(style="background-image:url('/images/project/ntpc.png')")
+                            .projectImage.ratioImg.ratioImg-1by1(style="background-image:url('/images/project/ntpc.jpg')")
                     .col-lg-4.col-md-6
                         a.projectItem.projectHover(href="https://www.zenfar.com.tw/portal",target="_blank")
                             .projectHover-inner
@@ -140,7 +140,7 @@ block content
                                     | 專案執行項目
                                     br/
                                     | Front-End
-                            .projectImage.ratioImg.ratioImg-1by1(style="background-image:url('/images/project/zenfar.png')")
+                            .projectImage.ratioImg.ratioImg-1by1(style="background-image:url('/images/project/zenfar.jpg')")
                     .col-lg-4.col-md-6
                         a.projectItem.projectHover(href="https://www.minfa168.com.tw/",target="_blank")
                             .projectHover-inner
@@ -149,7 +149,7 @@ block content
                                     | 專案執行項目
                                     br/
                                     | Front-End
-                            .projectImage.ratioImg.ratioImg-1by1(style="background-image:url('/images/project/minfar.png')")
+                            .projectImage.ratioImg.ratioImg-1by1(style="background-image:url('/images/project/minfar.jpg')")
                     .col-lg-4.col-md-6
                         a.projectItem.projectHover(href="https://bre.is/SA8BMgQv",target="_blank")
                             .projectHover-inner
@@ -158,7 +158,7 @@ block content
                                     | 專案執行項目
                                     br/
                                     | Visual Design, UI Design, Front-End
-                            .projectImage.ratioImg.ratioImg-1by1(style="background-image:url('/images/project/land.ntpc.png')")
+                            .projectImage.ratioImg.ratioImg-1by1(style="background-image:url('/images/project/land.ntpc.jpg')")
                     .col-lg-4.col-md-6
                         a.projectItem.projectHover(href="https://bre.is/Mg2MVPvj",target="_blank")
                             .projectHover-inner
@@ -167,7 +167,7 @@ block content
                                     | 專案執行項目
                                     br/
                                     | Visual Design, UI Design
-                            .projectImage.ratioImg.ratioImg-1by1(style="background-image:url('/images/project/CafeFinder.png')")
+                            .projectImage.ratioImg.ratioImg-1by1(style="background-image:url('/images/project/CafeFinder.jpg')")
                 .text-center
                     a.btn.btn-secondary(href="#") MORE
 block footer
