--- a/source/scss/layout/page/_aboutMe.scss
+++ b/source/scss/layout/page/_aboutMe.scss
@@ -48,7 +48,7 @@
         content: "";
         background-image: url(../images/portfolio-pic.jpg);
         display: block;
-        background-size: contain;
+        background-size: 101%;
         background-repeat: no-repeat;
         padding-top: percentage(1);
         border-radius: 10px;
