調整文字與版面

--- a/source/pug/index.pug
+++ b/source/pug/index.pug
@@ -57,7 +57,7 @@ block content
                         .col-lg-6
                             .pillTitle
                                 .pillTitle-content Work
-                            ul.expList.expList-lineDeco
+                            ul.expList.expList-lineDeco-work
                                 li.expList-item
                                     .exp-title 2019.2 ~ NOW
                                     .exp-content
@@ -65,23 +65,27 @@ block content
                                         br
                                         | UI Designer / 
                                         br
-                                        | Front-end Engineer 
+                                        | Frontend Engineer 
                                 li.expList-item
                                     .exp-title 2016.11 ~ 2019.2
                                     .exp-content
-                                        | 無限創意科技 - 前端工程師
+                                        | 無限創意科技 - Frontend Engineer
                                         br
-                                        | 數位前進 - 前端工程師 
+                                        | 數位前進 - Frontend Engineer
                                 li.expList-item
                                     .exp-title 2016.4 ~ 2016.11
                                     .exp-content
-                                        | 巴克斯數位 - 網頁工程師 
+                                        | 巴克斯數位 - Web Developer
+                                li.expList-item
+                                    .exp-title 2014.10 ~ 2016.3
+                                    .exp-content
+                                        | 東南旅行社 - Web Designer
                                 li.expList-item
                                     .exp-title 2010.8 ~ 2014.10
                                     .exp-content
-                                        | 藏墨數位藝術 - 視覺設計師
+                                        | 藏墨數位藝術 - Visual Designer
                                         br
-                                        | 四方通行旅行社 - 網頁設計師 
+                                        | 四方通行旅行社 - Web Designer 
                         .col-lg-6
                             .pillTitle
                                 .pillTitle-content Volunteer
@@ -102,7 +106,7 @@ block content
                                         | MOPCON - UI Designer 
                             .pillTitle
                                 .pillTitle-content Education
-                                ul.expList.expList-lineDeco
+                                ul.expList.expList-lineDeco-education
                                     li.expList-item
                                         .exp-title 2017
                                         .exp-content
