--- a/source/pug/index.pug
+++ b/source/pug/index.pug
@@ -173,7 +173,7 @@ block content
                                     | Visual Design, UI Design
                             .projectImage.ratioImg.ratioImg-1by1(style="background-image:url('/images/project/CafeFinder.jpg')")
                 .text-center
-                    a.btn.btn-secondary(href="#") MORE
+                    a.btn.btn-secondary.disabled(href="#") MORE
 block footer
     .footer
         .container
